# ssrDroid

./: .gitignore  .gitmodules  FAQ.md  README.md  build.gradle  gradle.properties  settings.gradle  update.json
.github/workflows/: build-publish.yml
app/: build.gradle
app/jni/: CMakeLists.txt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/ssrlive/ssrdroid/: ShadowsocksApplication.kt  ShadowsocksVpnService.kt
app/src/main/java/com/ssrlive/ssrdroid/utils/: Constants.kt  Utils.kt
app/src/main/res/values/: strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
core/: build.gradle
core/schemas/com.github.shadowsocks.database.PrivateDatabase/: 3.json
core/src/debug/res/values-zh-rCN/: strings.xml
core/src/main/: AndroidManifest.xml
core/src/main/assets/acl/: bypass-china.acl  bypass-lan-china.acl  gfwlist.acl
core/src/main/java/com/crashlytics/android/: Crashlytics.kt
core/src/main/java/com/github/shadowsocks/: Core.kt  UrlImportActivity.kt
core/src/main/java/com/github/shadowsocks/acl/: Acl.kt  AclSyncer.kt
core/src/main/java/com/github/shadowsocks/aidl/: ShadowsocksConnection.kt
core/src/main/java/com/github/shadowsocks/bg/: Dns2socks.kt  (+14 more)
core/src/main/jni/: Android.mk  CMakeLists.txt
core/src/main/res/values/: arrays.xml  strings.xml
core/src/main/res/values-es/: strings.xml
core/src/main/res/values-fa/: strings.xml
core/src/main/res/values-fr/: strings.xml
core/src/main/res/values-ja/: strings.xml
core/src/main/res/values-ko/: strings.xml
core/src/main/res/values-ru/: strings.xml
core/src/main/res/values-tr/: strings.xml
core/src/main/res/values-zh-rCN/: strings.xml
core/src/main/res/values-zh-rTW/: strings.xml
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt
fastlane/metadata/android/zh-CN/: full_description.txt  short_description.txt
gradle/wrapper/: gradle-wrapper.properties
mobile/: .gitignore  build.gradle  r8-rules.pro
mobile/src/main/: AndroidManifest.xml
mobile/src/main/java/com/github/shadowsocks/: AboutFragment.kt  AppManager.kt  GlobalSettingsPreferenceFragment.kt  MainActivity.kt  ProfileConfigActivity.kt  ProfileConfigFragment.kt  ProfilesFragment.kt  UdpFallbackProfileActivity.kt
mobile/src/main/res/layout/: layout_apps.xml  layout_main.xml  navigation_header.xml
mobile/src/main/res/menu/: profile_manager_menu.xml
mobile/src/main/res/raw/: about.html
mobile/src/main/res/xml/: pref_global.xml  pref_profile.xml
plugin/: build.gradle
plugin/src/main/: AndroidManifest.xml
rust/: .gitignore  Cargo.toml
tv/src/main/: AndroidManifest.xml
tv/src/main/res/xml/: pref_main.xml
(+19 files in other folders)
